syntax = "proto3";

option csharp_namespace = "IdentityApi";

package identitygrpc;

service IdentityGrpc {
    rpc GetAddress(GetAddressRequest) returns (GetAddressResponse);
}

message GetAddressRequest {
    int32 addressId = 1;
}

message GetAddressResponse {
    int32 id = 1;
    int32 userId = 2;
    string firstName = 3;
    string lastName = 4;
    string phoneNumber = 5;
    string city = 6;
    string district = 7;
    string neighborhood = 8;
    string streetAddress = 9;
    string addressType = 10;
}
